--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "knex": "^0.95.15",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
-    "pug": "^3.0.2",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "sqlite3": "^5.0.2"
   }
 }
