--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "faker": "^5.5.3",
     "knex": "^0.95.15",
+    "mongoose": "^6.1.6",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.0",
