--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "faker": "^5.5.3",
     "knex": "^0.95.15",
     "mongoose": "^6.1.6",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
+    "normalizr": "^3.6.1",
     "socket.io": "^4.4.0",
+    "socket.io-express-session": "^0.1.3",
     "sqlite3": "^5.0.2"
   }
 }
