--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -22,6 +23,8 @@
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
     "normalizr": "^3.6.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.4.0",
     "socket.io-express-session": "^0.1.3",
     "sqlite3": "^5.0.2"
