--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.15",
     "normalizr": "^3.6.1",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.4.0",
     "socket.io-express-session": "^0.1.3",
